OmarElKhatibCS/fixing issue #9016 , fixing scrollbar for small screens

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -9,6 +9,7 @@
   position: relative;
   margin: 0 auto;
   max-width: $max-width;
+  width: 99%;
   text-align: left;
 
   @media screen and (max-width: 949px) {
